# Code

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  CUsersAnupam.claudeagent-log.txt  FRAMEWORK_DECISION.md  README.md  pyproject.toml  requirements.txt  test_app_startup.py
data/journals/: 5df83b16-30d7-448c-86bb-05cd2107005c.msgpack
src/harness/: __init__.py  app.py  config.py  logging.py  main.py  tui.py
src/harness/context/: __init__.py  project_context.py
src/harness/core/: approval_manager.py  completion.py  error_memory.py  loop.py  models.py  risk.py  task_manager.py  user_preferences.py  verifier.py
src/harness/orchestration/: __init__.py  agent.py  capsule.py  llm_client.py  orchestrator.py  spawner.py
src/harness/persistence/: __init__.py  database.py  knowledge_graph.py  models.py  session.py
src/harness/prompts/: __init__.py  constraints.py  context_injector.py  engine.py  fragments.py  models.py  system.py
src/harness/registry/: __init__.py  definitions.py
src/harness/tools/: __init__.py  definitions.py  executor.py  factory.py  handlers.py  models.py  permissions.py  router.py
src/harness/ui/: __init__.py  _win_console_input.py  agent_activity.py  agent_view.py  claude_code_style.py  command_actions.py  command_palette.py  header.py  input_bar.py  input_handler.py  keybinds.py  main_panel.py  markdown_text.py  renderers.py  state.py  statusbar.py  stream_aggregator.py  stream_listener.py  terminal.py  tool_view.py  welcome_panel.py
src/sophisticated_agent_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test_init/: .env
tests/: test_input_render.py  test_loop.py  test_render.py  test_ui_functionality.py
