[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophisticated-agent-harness"
version = "0.1.0"
description = "Self-improving agent orchestration harness with autonomous loop execution"
requires-python = ">=3.11"
authors = [{name = "Anupam", email = "anupam@example.com"}]
license = {text = "MIT"}

dependencies = [
    # Core Runtime
    "asyncio-contextmanager",

    # Multi-LLM Support
    "litellm>=1.0.0",
    "anthropic>=0.7.0",
    "openai>=1.0.0",

    # Async & Concurrency
    "tenacity>=8.2.3",
    "aiofiles>=23.2.1",
    "httpx>=0.25.0",
    "asyncpg>=0.28.0",

    # Database & State
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "msgpack>=1.0.7",

    # Prompt & Context
    "jinja2>=3.1.2",
    "rank-bm25>=0.2.2",
    "networkx>=3.1",
    "pyyaml>=6.0",

    # Monitoring & Logging
    "structlog>=23.1.0",
    "prometheus-client>=0.17.1",

    # CLI & Config
    "typer[all]>=0.9.0",
    "python-dotenv>=1.0.0",

    # Terminal UI
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.10.0",
    "mypy>=1.5.0",
]

optional = [
    "sentence-transformers>=2.2.2",
    "redis>=5.0.0",
    "diskcache>=5.6.1",
    "uvloop>=0.17.0",  # Production: 2-10x faster event loop
]

[project.scripts]
harness = "harness.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
